# sarascript

./: .gitignore  Cargo.toml  README.md  TODO.md  event.html  example.html  index.html  simple.html
backend/: Cargo.toml  README.md
backend/data/: example_config.ini  httpconfig.ini  rmcconfig.ini
backend/db/: schema.sql
backend/src/: http.rs  main.rs  manpage  server.rs
backend/tests/: curl-tests
data/: example_config.ini
db/: schema.sql
site/: index.html  login.html  styles.css
site/belgrade/: index.html
site/belgrade/documents/: index.html
site/belgrade/reports/: index.html
site/css/: styles.css
site/shared/: navbar.css  navbar.html
src/: adapter.rs  config_parser.rs  error.rs  http.rs  hyper_tokio_adapter.rs  lib.rs  main.rs  notes  sarascript.pest  server.rs
testdata/: needle_in_haystack.html  two_includes.html
tests/: bad_format1.html  bad_format2.html  basic1.html  curl_tests  integration_tests.rs  navbar.htmlsnippet  two_includes2.html
