[package]
name = "htmlprep"
version = "0.1.0-alpha4"
description = "IN-ALPHA: An HTML Pre-Processor for creating static HTML files"
license = "MIT OR Apache-2.0"
include = ["/src"]
rust-version = "1.70"

edition = "2021"

[dependencies]
async-std = "1.12.0"
async-std-openssl = "0.6.3"
daemonize = "0.5.0"
http = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["full"] }
openssl = "0.10.62"
regex = "1.8.4"
[dev-dependencies]
tempdir = "0.3"
