[package]
name = "htmlprep"
version = "0.1.0-alpha7"
description = "IN-ALPHA: An HTML Pre-Processor for creating static HTML files"
license = "MIT OR Apache-2.0"
include = ["/src"]
rust-version = "1.70"

edition = "2021"

[dependencies]
daemonize = "0.5.0"
http = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["full"] }
pest = "2.7.5"
pest_derive = "2.7.5"
rustls-pemfile = "2.0.0"
tokio = { version = "1.35.1", features = ["net", "rt", "rt-multi-thread", "io-util", "io-std", "sync", "fs", "macros"] }
tokio-rustls = "0.25.0"
webpki-roots = "0.26.0"
[dev-dependencies]
tempdir = "0.3"
tokio = { version = "1.35.1", features = ["macros"]}
[build-dependencies]
tokio = { version = "1.35.1", features = ["macros"]}
