[package]
name = "htmlprep"
version = "0.1.0-alpha10"
description = "IN-ALPHA: An HTML Pre-Processor for creating static HTML files"
license = "MIT OR Apache-2.0"
include = ["/src"]
rust-version = "1.70"

edition = "2021"

[dependencies]
config = { version = "0.13.4", features = ["toml"] }
http = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["client", "http1"] }
pest = "2.7.5"
pest_derive = "2.7.5"
rustls-pemfile = "2.0.0"
tokio = { version = "1.35.1", features = ["net", "rt-multi-thread", "io-util", "io-std", "sync", "fs"] }
tokio-rustls = "0.25.0"
webpki-roots = "0.26.0"

daemonize = { version = "0.5.0", optional = true }
log = { version = "0.4.20", optional = true }
simplelog = { version = "0.12.1", optional = true }
anyhow = { version = "1.0.78", optional = true }
hickory-resolver = "0.24.0"

[features]
default = ["server"]
server = ["dep:daemonize", "dep:log", "dep:simplelog", "dep:anyhow", "tokio/macros", "hyper/server"]

[lib]
name = "sarascript"
path = "src/lib.rs"

[[bin]]
name = "sarascriptd"
path = "src/main.rs"
